Adding maven to the project and refactoring tests for using new JUnit dependency.